oracle/prod/chat-gpt-next-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatgpt-service
spec:
  selector:
    app: chatgpt-next-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
